# CubeAI-FlowDecompose

./: .gitignore  PHONE_AI_TROUBLESHOOTING.md  PROJECT_README.md  QUICK_START_参考卡.md  README.md  check_phone_ai.sh  design.md  setup_environment.sh  start.sh  status.sh  文档中心.md  项目启动完整攻略.md
Backend/: video_downloader.py
Backend/phone_ai/: .env  README.md  alembic.ini  pyproject.toml  run_shot_detection.py  start_backend.sh  start_backend_https.sh
Backend/phone_ai/alembic/: env.py
Backend/phone_ai/configs/: __init__.py  settings.py
Backend/phone_ai/legacy_docs/: HTTPS_SETUP.md  HUD_IMPLEMENTATION.md  QUICK_FIX.md  TROUBLESHOOTING.md
Backend/phone_ai/src/: __init__.py
Backend/phone_ai/src/agents/: __init__.py  feature_extractor.py  heuristic_analyzer.py  instruction_generator.py  metadata_synthesizer.py  motion_rules.py  prompt_templates.py  retrieval_agent.py
Backend/phone_ai/src/api/: __init__.py  app.py  auth.py  realtime_routes.py  routes.py
Backend/phone_ai/src/models/: data_types.py  database.py  enums.py
Backend/phone_ai/src/realtime/: analyzer.py  hysteresis.py  llm_advisor.py  session_manager.py  smoothing.py  task_manager.py  templates.py  websocket_handler.py
Backend/phone_ai/src/schemas/: __init__.py  metadata_schema.json  validator.py
Backend/phone_ai/src/services/: __init__.py  environment_scanner.py  llm_client.py  vector_db.py
Backend/phone_ai/src/tasks/: __init__.py  analysis_tasks.py
Backend/phone_ai/tests/: conftest.py  test_instruction_generator.py  test_integration.py  test_metadata_synthesizer.py  test_models.py  test_realtime_analyzer.py  test_realtime_integration.py  test_smoothing.py  test_uploader.py
Backend/phone_ai_node_server/: index.js  package-lock.json  package.json  realtime-shooting.js
Backend/video_ai_demo/: pyproject.toml  start.sh
frontend/: .env  .env.backup  API_COMPATIBILITY.md  API_DOCUMENTATION.md  API_INTEGRATION_STATUS.md  App.tsx  BACKEND_SETUP_REQUIRED.md  DEPENDENCIES.md  DOCS_INDEX.md  DOCUMENTATION_COMPLETE.md  ENV_CONFIG.md  FIX_API_ERROR.md  FRONTEND_INTEGRATION_GUIDE.md  GENERATE_CERTS.md  INTEGRATION_COMPLETE.md  MIGRATION_GUIDE.md  MOBILE_ACCESS_GUIDE.md  PROJECT_OVERVIEW.md  QUICK_FIX_MOBILE.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  README_API_INTEGRATION.md  SHOT_ANALYSIS_GUIDE.md  SHOT_ANALYSIS_NEW_FEATURES.md  START_HERE.md  TROUBLESHOOTING.md  VIDEO_UPLOAD_GUIDE.md  env.example.txt  index.css  index.html  metadata.json  package-lock.json  package.json  start_http.sh  types.ts  vite.config.ts
frontend/components/: AnalysisPanel.tsx  Dashboard.tsx  Discovery.tsx  Editor.tsx  KnowledgeBase.tsx  Login.tsx  ProfileModal.tsx  Settings.tsx  ShotAnalysis.tsx  Sidebar.tsx  VideoSlideshow.tsx
frontend/components/phone_ai/: AdviceDisplay.tsx  CameraCapture.tsx  CameraDebug.tsx  ConsoleView.tsx  MobileView.tsx  ShootingAdvisorView.tsx  ShootingConsoleView.tsx
frontend/services/: analysisService.ts  api.ts  dashboardService.ts  geminiService.ts  knowledgeService.ts  mockService.ts  videoAnalysisService.ts
frontend/utils/: urlHelper.ts
phone_ai/: Aim.md  QUICK_START.md  run_segment_analysis.py
phone_ai/alembic/versions/: 20260101_000000_001_initial_schema.py
phone_ai/configs/: settings.py
phone_ai/src/agents/: uploader.py
phone_ai/src/models/: __init__.py
phone_ai/src/realtime/: __init__.py  advice_engine.py  realtime_service.py  state_machine.py  types.py  websocket_handler.py
phone_ai/src/services/: orchestrator.py
phone_ai/story-galaxy-controller/: App.tsx  BACKEND_CHOICE.md  DYNAMIC_TASKS_READY.md  INSTALL_CERT.md  README.md  index.html  metadata.json  openssl.cnf  package-lock.json  package.json  setup-https.sh  start-https.sh  start.sh  types.ts  vite.config.https.ts  vite.config.ts
phone_ai/story-galaxy-controller/components/: ConsoleView.tsx  QRCode.tsx  (+3 more)
phone_ai/tests/: test_heuristic_analyzer.py  test_retrieval_agent.py
phone_ai/video_shooting_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
video_ai_demo/: .gitignore
video_ai_demo/app/: main.py
video_ai_demo/frontend/: index.html
(+7 files in other folders)
